# fastapi-upload-images

./: .gitignore  README.md  main.py  pyproject.toml
templates/: all-images.html  base.html  index.html
